2003-05-13  Moritz Schulte  <moritz@g10code.com>

	* secmem.c (stats_update): New function.
	(BLOCK_HEAD_SIZE): New symbol.
	(MB_FLAG_ACTIVE): New symbol.
	(ADDR_TO_BLOCK, BLOCK_VALID): New macros.
	(mb_get_next): New function.
	(mb_get_prev): New function.
	(mb_merge): New function.
	(mb_get_new): New function.
	(unused_blocks): Removed variable.
	(init_pool): Initialize new memory pool.
	(_gcry_secmem_malloc): Use new heap management code.
	(_gcry_secmem_free): Likewise.
	(_gcry_secmem_realloc): Likewise.
	Renamed type MEMBLOCK to memblock_t.

2003-04-27  Moritz Schulte  <moritz@g10code.com>

	* cipher.h (gcry_pubkey_spec): New member: sexp_names.

2003-04-23  Moritz Schulte  <moritz@g10code.com>

	* cipher.h (gcry_pubkey_spec): Removed members: npkey, nskey,
	nenc, nsig.
	(gcry_pubkey_spec): Added members: elements_pkey, elements_skey,
	elements_enc, elements_sig, elements_grip.

2003-04-17  Moritz Schulte  <moritz@g10code.com>

	* g10lib.h (GcryModule): New typedef.

	* gcrypt.h (gcry_cipher_register, gcry_cipher_unregister,
	gcry_digest_register, gcry_digest_unregister,
	gcry_pubkey_register, gcry_pubkey_unregister): Function
	declarations removed - for now.
	
	* gcrypt.h (GcryModule): Declaration removed.
	* gcrypt.h (GcryPubkeySpec, GcryDigestSpec, GcryCipherSpec):
	Types Moved... 
	* cipher.h: ... here.

2003-04-17  Moritz Schulte  <moritz@g10code.com>

	* cipher.h: Declare digest_spec_sha512 and digest_spec_384.

2003-04-16  Moritz Schulte  <moritz@g10code.com>

	* module.c (_gcry_module_use): New function.
	* g10lib.h (_gcry_module_use): Declare function.

	* libgcrypt-config.in: Support for --algorithms switch, which
	prints the algorithms included in the built libgcrypt.

	* global.c (gcry_set_progress_handler): Register progress
	functions depending on the enabled algorithms.

2003-04-07  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (libgcrypt_la_SOURCES): Added module.c

	* module.c: New file.
	(_gcry_module_add): New function.